--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
                 <ul class="menu_lista">
-                    <li><a class="menu_boton">Work</a></li>
+                    <li><a class="menu_boton">Trabajo</a></li>
                     <li><a class="menu_boton">About</a></li>
                     <li><a class="menu_boton">Contact</a></li>
                 </ul>
