--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 
 
         <a>
-            <section id="nikau" style="background-color: #7A4737;">
+            <section id="nikau" style="background-color: #262B52;">
                 <div class="row">
                     <img src="./assets/img/nikau_portada.png" alt="descripcion de la foto">
                 </div>
                 
                 <div class="row project_content">
                     <div>
-                        <h1 class="n100 marg_s">Nïkau</h1>
-                        <div style="color: #D07E64;" class="wrapper_etiqueta">
+                        <h1 class="n100 marg_s">Nïkau Hotel & Resort</h1>
+                        <div style="color: #555d9d;" class="wrapper_etiqueta">
                             <p class="small etiqueta">Branding</p>
                             <p class="small etiqueta">Packaging</p>
                         </div>   
