arreglo flecha down

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <section id="about" class="gradient_dos">
             <div class="wrapper_about">
                 <p class="hidden">none</p>
-                <div>
+                <div class="about_content">
                     <h2 class="n100 marg_l">Sobre mí</h2>
                     <p class="n100 default marg_l">Hola, mi nombre es Miguel Ángel pero todos me conocen como Jato, soy un diseñador gráfico e ilustrador establecido en Granada. Considero el diseño gráfico un lenguaje donde nos valemos de recursos para trasmitir ideas y emociones.</p>
 
