--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             </svg>
                     </a>                    
                 </div>
-                <div class="small n100">Creado por Griot y <a href="https://javiexe.github.io/javiexe/" target="blank" class="small orange">Javi.exe</a></div>
+                <div class="small n100">Creado por Griot y <a href="https://javiexe.github.io/javiexe/" target="blank" class="small orange link">Javi.exe</a></div>
             </div>
             
         </section>
