--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <a>
             <section id="habit" style="background-color: #0B3994;">
                 <div class="row">
-                    <img src="./assets/img/habit.png" alt="packaging de cafe">
+                    <img src="./assets/img/habit2.png" alt="packaging de cafe">
                 </div>
                 
                 <div class="row project_content">
@@ -210,7 +210,7 @@
                             </svg>
                     </a>                    
                 </div>
-                <div class="small n100">Creado por Griot y <a href="https://javiexe.github.io/javiexe/" target="blank" class="small orange link">Javi.exe</a></div>
+                <div class="small n100">Creado por Griot y <a href="https://javiexe.github.io/javiexe/" target="blank" class="small link">Javi.exe</a></div>
             </div>
             
         </section>
